--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                 <p>SoPhoto</p>
             </div>
             <div class="clearfix"></div>
-            <form action="" class="search"><input class="search-btn" type="submit" value=""><input class="inputValues"
-            type="text"/></form>
+            <form action="" class="search"><input class="search-btn" type="submit" value=""><input type="text"/></form>
             <a href="#"><img src="img/logo.svg" alt="" class="logo"></a>
             <a href="#" class="login">Войти</a>
         </div>
