Небольшие изменения стилей

--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,12 @@
             </div>
         </div>
     </main>
-    <footer class="profile-footer"></footer>
+    <footer class="profile-footer">
+        <div class="footer-flex">
+            <div class="footer-square-profile"></div>
+            <p class="footer-yellow-profile">SoPhoto 2019</p>
+        </div>
+    </footer>
     <script src="js/jquery.min.js"></script>
 </div>
 </body>
