Небольшие правки стилей

--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SoPhoto - Профиль</title>
+    <title>SoPhoto - Настройки</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="css/style.css">
@@ -47,6 +47,7 @@
             </form>
         </div>
     </main>
+    <footer></footer>
     <script src="js/jquery.min.js"></script>
 </div>
 </body>
