--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
     <footer class="profile-footer">
         <div class="footer-flex">
             <div class="footer-square-profile"></div>
-            <p class="footer-yellow-profile">SoPhoto 2019</p>
+            <p class="footer-yellow-profile">Задание дня</p>
         </div>
     </footer>
     <script src="js/jquery.min.js"></script>
