--- a/daytasks.html
+++ b/daytasks.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="daytasks-background-top"></div>
-        <div class="tasks-flex">
+        <div class="tasks-container-flex">
             <span class="doing">Что Вы выберите сегодня?</span>
             <div class="task-square">
                 <p>Цвет дня - красный! <br><br> Снимайте фотографии, в которых красный цвет будет
